# compare-python-orm

./: README.md  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
.devcontainer/initdb.d/: create_database.sql
SQLAlchemy + Alembic/: .gitignore  00_setup.ipynb  01_select.ipynb  90_generate_pydantic_from_sa.ipynb  90_pydantic_partial.ipynb  91_sa_to_pydantic.ipynb  99_pydantic_partial.ipynb  database.py  models.py  olivier.py  tables.py  utils.py
SQLAlchemy + Alembic/migrations/: env.py
SQLAlchemy + Alembic/migrations/versions/: 20251221_073152_create_tables.py  20251226_133151_create_tables.py
