[project]
name = "compare-python-orm"
version = "0.0.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "ipykernel>=7.1.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
]

[tool.ruff]
extend-include = ["*.ipynb"]
